@@ -205,9 +205,11 @@ type type_param_flag =
 	| HExtends of type_path_normal
 	| HImplements of type_path_normal
 
+type enum_constructor = string * documentation * (string * bool * type_path) list * pos
+
 type type_def =
 	| EClass of string * documentation * type_param list * type_param_flag list * (class_field * pos) list
-	| EEnum of string * documentation * type_param list * enum_param list * (string * documentation * (string * type_path) list * pos) list
+	| EEnum of string * documentation * type_param list * enum_param list * enum_constructor list
 	| ESignature of string * documentation * type_param list * enum_param list * type_path
 	| EImport of string list * string * string option
 
